--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -5,13 +5,13 @@
 	<key>AdjustWindowForFontSizeChange</key>
 	<false/>
 	<key>ColoredSelectedTabOutlineStrength</key>
-	<real>1</real>
+	<real>0.60000002384185791</real>
 	<key>ColoredUnselectedTabTextProminence</key>
-	<real>1</real>
+	<real>0.0</real>
 	<key>Command</key>
 	<string></string>
 	<key>CompactMinimalTabBarHeight</key>
-	<real>25</real>
+	<real>20</real>
 	<key>Custom Color Presets</key>
 	<dict>
 		<key>3024 Day</key>
@@ -62464,11 +62464,11 @@
 		</dict>
 	</dict>
 	<key>CustomTabBarFontSize</key>
-	<real>14</real>
+	<real>15</real>
 	<key>Default Bookmark Guid</key>
 	<string>F5F0AB83-DDE9-47C6-BD9A-F746A2FE35E0</string>
 	<key>DefaultTabBarHeight</key>
-	<real>26</real>
+	<real>20</real>
 	<key>DimBackgroundWindows</key>
 	<false/>
 	<key>DimInactiveSplitPanes</key>
@@ -62476,10 +62476,12 @@
 	<key>DimOnlyText</key>
 	<false/>
 	<key>DisableFullscreenTransparency</key>
-	<false/>
+	<true/>
 	<key>DisableTabBarTooltips</key>
 	<true/>
 	<key>DrawBottomLineForHorizontalTabBar</key>
+	<true/>
+	<key>EnableDivisionView</key>
 	<false/>
 	<key>EnableRendezvous</key>
 	<false/>
@@ -62598,7 +62600,7 @@
 	<key>HideScrollbar</key>
 	<false/>
 	<key>HideTab</key>
-	<true/>
+	<false/>
 	<key>HideTabNumber</key>
 	<false/>
 	<key>HighVisibility</key>
@@ -62618,15 +62620,17 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>MinCompactTabWidth</key>
-	<integer>120</integer>
+	<integer>150</integer>
 	<key>MinTabWidth</key>
-	<integer>135</integer>
+	<integer>155</integer>
+	<key>MinimalSelectedTabUnderlineProminence</key>
+	<real>0.0</real>
 	<key>MinimalSplitPaneDividerProminence</key>
 	<real>0.20000000298023224</real>
 	<key>MinimalTabStyleBackgroundColorDifference</key>
-	<real>0.10000000149011612</real>
+	<real>0.070000000298023224</real>
 	<key>MinimalTabStyleOutlineStrength</key>
-	<real>0.69999998807907104</real>
+	<real>0.40000000596046448</real>
 	<key>MinimalTabStyleTreatLeftInsetAsPartOfFirstTab</key>
 	<false/>
 	<key>New Bookmarks</key>
@@ -62648,6 +62652,8 @@
 			<string>~/Projects</string>
 			<key>AWDS Window Option</key>
 			<string>Yes</string>
+			<key>Allow Title Setting</key>
+			<true/>
 			<key>Ambiguous Double Width</key>
 			<false/>
 			<key>Ansi 0 Color</key>
@@ -62860,8 +62866,18 @@
 				<key>Red Component</key>
 				<real>1</real>
 			</dict>
+			<key>Badge Font</key>
+			<string>HackNerdFontCompleteM-Regular</string>
+			<key>Badge Max Height</key>
+			<real>0.13</real>
+			<key>Badge Max Width</key>
+			<real>0.69999999999999996</real>
+			<key>Badge Right Margin</key>
+			<real>10</real>
 			<key>Badge Text</key>
 			<string></string>
+			<key>Badge Top Margin</key>
+			<real>10</real>
 			<key>Blend</key>
 			<real>0.086233248885389399</real>
 			<key>Blinking Cursor</key>
@@ -62932,6 +62948,8 @@
 			<string>No</string>
 			<key>Custom Directory</key>
 			<string>Advanced</string>
+			<key>Custom Tab Title</key>
+			<string>\(currentSession.path)</string>
 			<key>Default Bookmark</key>
 			<string>No</string>
 			<key>Description</key>
@@ -63358,7 +63376,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SFMonoNerdFontComplete-Regular 15</string>
+			<string>SFMonoNerdFontComplete-Medium 16</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Open Toolbelt</key>
@@ -63369,6 +63387,8 @@
 			<false/>
 			<key>Prompt Before Closing 2</key>
 			<integer>2</integer>
+			<key>Reduce Flicker</key>
+			<false/>
 			<key>Right Option Key Sends</key>
 			<integer>0</integer>
 			<key>Rows</key>
@@ -63399,6 +63419,8 @@
 			<false/>
 			<key>Shortcut</key>
 			<string></string>
+			<key>Show Status Bar</key>
+			<false/>
 			<key>Silence Bell</key>
 			<false/>
 			<key>Smart Cursor Color</key>
@@ -63517,6 +63539,111 @@
 					<string>[A-Z]+\-\d+</string>
 				</dict>
 			</array>
+			<key>Status Bar Layout</key>
+			<dict>
+				<key>advanced configuration</key>
+				<dict>
+					<key>algorithm</key>
+					<integer>0</integer>
+					<key>auto-rainbow style</key>
+					<integer>0</integer>
+					<key>font</key>
+					<string>.AppleSystemUIFont 12</string>
+					<key>remove empty components</key>
+					<false/>
+				</dict>
+				<key>components</key>
+				<array>
+					<dict>
+						<key>class</key>
+						<string>iTermStatusBarGitComponent</string>
+						<key>configuration</key>
+						<dict>
+							<key>knobs</key>
+							<dict>
+								<key>base: compression resistance</key>
+								<integer>1</integer>
+								<key>base: priority</key>
+								<real>5</real>
+								<key>iTermStatusBarGitComponentPollingIntervalKey</key>
+								<real>2</real>
+								<key>maxwidth</key>
+								<real>200</real>
+								<key>minwidth</key>
+								<integer>0</integer>
+								<key>shared text color</key>
+								<dict>
+									<key>Alpha Component</key>
+									<real>1</real>
+									<key>Blue Component</key>
+									<real>0.25</real>
+									<key>Color Space</key>
+									<string>sRGB</string>
+									<key>Green Component</key>
+									<real>0.25</real>
+									<key>Red Component</key>
+									<real>0.5</real>
+								</dict>
+							</dict>
+							<key>layout advanced configuration dictionary value</key>
+							<dict>
+								<key>algorithm</key>
+								<integer>0</integer>
+								<key>auto-rainbow style</key>
+								<integer>0</integer>
+								<key>font</key>
+								<string>.AppleSystemUIFont 12</string>
+								<key>remove empty components</key>
+								<false/>
+							</dict>
+						</dict>
+					</dict>
+					<dict>
+						<key>class</key>
+						<string>iTermStatusBarWorkingDirectoryComponent</string>
+						<key>configuration</key>
+						<dict>
+							<key>knobs</key>
+							<dict>
+								<key>base: compression resistance</key>
+								<real>2</real>
+								<key>base: priority</key>
+								<real>5</real>
+								<key>maxwidth</key>
+								<real>+infinity</real>
+								<key>minwidth</key>
+								<integer>0</integer>
+								<key>path</key>
+								<string>path</string>
+								<key>shared text color</key>
+								<dict>
+									<key>Alpha Component</key>
+									<real>1</real>
+									<key>Blue Component</key>
+									<real>0.38500000000000001</real>
+									<key>Color Space</key>
+									<string>sRGB</string>
+									<key>Green Component</key>
+									<real>0.25</real>
+									<key>Red Component</key>
+									<real>0.5</real>
+								</dict>
+							</dict>
+							<key>layout advanced configuration dictionary value</key>
+							<dict>
+								<key>algorithm</key>
+								<integer>0</integer>
+								<key>auto-rainbow style</key>
+								<integer>0</integer>
+								<key>font</key>
+								<string>.AppleSystemUIFont 12</string>
+								<key>remove empty components</key>
+								<false/>
+							</dict>
+						</dict>
+					</dict>
+				</array>
+			</dict>
 			<key>Sync Title</key>
 			<false/>
 			<key>Tags</key>
@@ -63526,9 +63653,13 @@
 			<key>Thin Strokes</key>
 			<integer>0</integer>
 			<key>Title Components</key>
-			<integer>2</integer>
+			<integer>4</integer>
 			<key>Transparency</key>
 			<real>0.0</real>
+			<key>Unicode Normalization</key>
+			<integer>0</integer>
+			<key>Unicode Version</key>
+			<integer>9</integer>
 			<key>Unlimited Scrollback</key>
 			<true/>
 			<key>Use Bold Font</key>
@@ -64257,11 +64388,11 @@
 	<key>OpenTmuxWindowsIn</key>
 	<integer>1</integer>
 	<key>OptimumTabWidth</key>
-	<integer>230</integer>
+	<integer>300</integer>
 	<key>PMPrintingExpandedStateForPrint2</key>
 	<false/>
 	<key>PerPaneBackgroundImage</key>
-	<true/>
+	<false/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
@@ -64327,6 +64458,8 @@
 	<integer>5</integer>
 	<key>TabStyleWithAutomaticOption</key>
 	<integer>5</integer>
+	<key>TabTitlesUseSmartTruncation</key>
+	<true/>
 	<key>TabViewType</key>
 	<integer>1</integer>
 	<key>TabsHaveCloseButton</key>
