--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -6,6 +6,8 @@
 	<array/>
 	<key>AdjustWindowForFontSizeChange</key>
 	<false/>
+	<key>AlertsIndicateShortcuts</key>
+	<false/>
 	<key>BadgeFont</key>
 	<string>SF Mono</string>
 	<key>ColoredSelectedTabOutlineStrength</key>
@@ -62788,7 +62790,7 @@
 				<key>Color Space</key>
 				<string>sRGB</string>
 				<key>Green Component</key>
-				<real>0.56428106983915438</real>
+				<real>0.67305867488221338</real>
 				<key>Red Component</key>
 				<real>0.72523069381713867</real>
 			</dict>
@@ -63438,7 +63440,7 @@
 			<key>Reduce Flicker</key>
 			<false/>
 			<key>Right Option Key Sends</key>
-			<integer>0</integer>
+			<integer>1</integer>
 			<key>Rows</key>
 			<integer>57</integer>
 			<key>Screen</key>
@@ -63725,6 +63727,8 @@
 			<integer>1</integer>
 			<key>Transparency</key>
 			<real>0.0</real>
+			<key>Triggers</key>
+			<array/>
 			<key>Unicode Normalization</key>
 			<integer>0</integer>
 			<key>Unicode Version</key>
@@ -64544,6 +64548,8 @@
 	<key>UseCustomTabBarFontSize</key>
 	<true/>
 	<key>UseLionStyleFullscreen</key>
+	<false/>
+	<key>UseVirtualKeyCodesForDetectingDigits</key>
 	<false/>
 	<key>VerticalBarCursorWidth</key>
 	<real>3</real>
