--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -24,6 +24,13 @@
   # TERM: screen-256color
 
 window:
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  # background_opacity: 0.95
+  opacity: 1
+
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -378,11 +385,6 @@ colors:
   #
   #command: None
 
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
 
 #selection:
   # This string contains all characters that are used as separators for
@@ -503,10 +505,24 @@ hints:
   #   - MoveViModeCursor
   #       Move the vi mode cursor to the beginning of the hint.
   #       http://ya.ru
+  #
+  #       ARCH-123
   enabled:
    - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
              [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
      command: open
+     # post_processing: true
+     mouse:
+       enabled: true
+       mods: Command
+     binding:
+       key: U
+       mods: Control|Shift
+   - regex: "[A-Z]+-\\d+"
+     command:
+       program: bash
+       args: ["-c", "$HOME/.zsh/scripts/jr-open ${0:-}"]
+     # command: "/usr/bin/env bash -c 'eval \"$HOME/.zsh/scripts/jr-open\" ${0:-}'"
      # post_processing: true
      mouse:
        enabled: true
@@ -856,7 +872,7 @@ hints:
   #- { key: F,              mods: Command, mode: ~Search,     action: SearchForward         }
   #- { key: B,              mods: Command, mode: ~Search,     action: SearchBackward        }
 
-#debug:
+debug:
   # Display the time it takes to redraw each frame.
   #render_timer: false
 
@@ -872,7 +888,7 @@ hints:
   #   - Info
   #   - Debug
   #   - Trace
-  #log_level: Warn
+  log_level: Debug
 
   # Print all received window events.
   #print_events: false
