--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,8 @@
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key M split-window -h "$EDITOR ~/.tmux.conf"
 
+set -g default-command "${SHELL}"
+
 # server options
 set-option -gs default-terminal "xterm-256color"
 # FYI: check for true color support using tmux info | ag Tc and verify using true-color-support
@@ -24,6 +26,7 @@ set-window-option -g xterm-keys on
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key C-e run-shell "tmux capture-pane -p | nvim -R"
 
 # clipboard
 # set -g default-command "reattach-to-user-namespace -l fish"
@@ -53,6 +56,7 @@ setw -g monitor-activity off
 set -g bell-action none
 
 # open pane in same path
+bind c new-window -c "#{pane_current_path}"
 bind '%' split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
