--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -521,8 +521,7 @@ hints:
    - regex: "[A-Z]+-\\d+"
      command:
        program: bash
-       args: ["-c", "$HOME/.zsh/scripts/jr-open ${0:-}"]
-     # command: "/usr/bin/env bash -c 'eval \"$HOME/.zsh/scripts/jr-open\" ${0:-}'"
+       args: ["-c", "open \"https://jr.avito.ru/browse/${0:-}\""]
      # post_processing: true
      mouse:
        enabled: true
