--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,8 @@ set-option -gs default-terminal "xterm-256color"
 # Enable True Color and RGB support
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
+# Fix cursor shape
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' 
 # Enable double/curly underline
 set-option -gas terminal-overrides '*:Smulx=\E[4::%p1%dm'
 set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
