--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,24 +1,27 @@
 # https://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 # https://github.com/nicknisi/dotfiles/blob/main/tmux/tmux.conf.symlink
 
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key r source-file ~/.tmux.conf \;
+display-message "~/.tmux.conf reloaded"
 bind-key M split-window -h "$EDITOR ~/.tmux.conf"
 
 set -g default-command "${SHELL}"
 
-# server options
+# Server options
 set-option -gs default-terminal "xterm-256color"
-# FYI: check for true color support using tmux info | ag Tc and verify using true-color-support
+
 # Enable True Color and RGB support
 set-option -gas terminal-overrides "*:Tc"
 set-option -gas terminal-overrides "*:RGB"
+
 # Fix cursor shape
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q' 
+
 # Enable double/curly underline
 set-option -gas terminal-overrides '*:Smulx=\E[4::%p1%dm'
 set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-###
+# VI mode
 set -g status-keys vi
 setw -g mode-keys vi
 
@@ -30,41 +33,30 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind-key C-e run-shell "tmux capture-pane -p | nvim -R"
 
-# clipboard
-# set -g default-command "reattach-to-user-namespace -l fish"
-# bind-key -T edit-mode-vi Up send-keys -X history-up
-# bind-key -T edit-mode-vi Down send-keys -X history-down
-# bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
-# unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-# unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-# unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
-# unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
-
 set -gs escape-time 10
 set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 set -g history-limit 1000000
 
-# automatically renumber tmux windows
+# Automatically renumber tmux windows
 set -g renumber-windows on
 
-# loud or quiet?
+# Loud or quiet?
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
-# open pane in same path
+# Open pane in same path
 bind c new-window -c "#{pane_current_path}"
 bind '%' split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 
-# pane movement shortcuts
+# Pane movement shortcuts
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -76,61 +68,23 @@ bind -r J resize-pane -D 10
 bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
-# don't rename windows automatically
-# set -g allow-rename off
-
-
-######################
-### DESIGN CHANGES ###
-######################
-
-# tmux_bg='#202328'
-# tmux_fg='#bbc2cf'
-# tmux_aqua='#3affdb'
-# tmux_beige='#f5c06f'
-# tmux_blue='#51afef'
-# tmux_brown='#905532'
-# tmux_cyan='#008080'
-# tmux_darkblue='#081633'
-# tmux_darkorange='#f16529'
-# tmux_green='#98be65'
-# tmux_grey="#8c979a"
-# tmux_lightblue='#5fd7ff'
-# tmux_lightgreen='#31b53e'
-# tmux_magenta='#c678dd'
-# tmux_orange='#d4843e'
-# tmux_pink='#cb6f6f'
-# tmux_purple='#834f79'
-# tmux_red='#ae403f'
-# tmux_salmon='#ee6e73'
-# tmux_violet='#a9a1e1'
-# tmux_white='#eff0f1'
-# tmux_yellow='#f09f17'
-
-#  modes
-# setw -g clock-mode-colour colour5
-# setw -g mode-style 'fg=colour1 bg=colour18 bold'
-
-# panes
-# set -g pane-border-style 'fg=colour19 bg=colour0'
-# set -g pane-active-border-style 'bg=colour0 fg=colour9'
-
-# statusbar
+# Statusbar
 set -g status-position bottom
 set -g status-justify left
-# set -g status-style 'bg=colour18 fg=colour137 dim'
 set -g status-left ''
-# set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %H:%M #[fg=colour247]▗#[fg=colour237,bg=colour247] %d %b %a #[fg=colour247,bg=default]▘'
 set -g status-right-length 50
-set -g status-left-length 20
+set -g status-left-length 0
 
-# setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
-# setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+set -g status-style bg=default
+set -g status-style fg=darkgray
 
-# setw -g window-status-style 'fg=colour9 bg=colour18'
-# setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# Statusbar: current windows
+setw -g window-status-current-style 'fg=colour237 bg=default bold' 
+setw -g window-status-current-format '#[fg=colour247]▗#[fg=colour8,bg=colour247] #I #[fg=colour237]#W#[fg=colour244] #F #[fg=colour247,bg=default]▘'
 
-# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+# Statusbar: windows
+setw -g window-status-style 'fg=colour0 bg=default'
+setw -g window-status-format '#[fg=colour237]▗#[fg=colour4,bg=colour237] #I #[fg=colour250]#W#[fg=colour244] #F #[fg=colour237,bg=default]▘'
 
-# messages
-# set -g message-style 'fg=colour232 bg=colour16 bold'
+setw -g window-status-bell-style 'bold'
