--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -202,7 +202,8 @@ colors:
   # everforest theme: https://github.com/sainnhe/everforest/wiki
   primary:
     # background: '#2b3339'
-    background: '#262525' #'#232222'
+    # background: '#262525' #'#232222'
+    background: '#282626' #'#232222'
     foreground: '#d3c6aa'
   normal:
     black:   '#4b565c'
