--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,6 +41,8 @@ set -g history-limit 1000000
 
 # Automatically renumber tmux windows
 set -g renumber-windows on
+set -g automatic-rename on
+set -g automatic-rename-format '#{b:pane_current_path}'
 
 # Loud or quiet?
 set -g visual-activity off
