--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,7 +25,7 @@ set-option -gas terminal-overrides '*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256
 set -g status-keys vi
 setw -g mode-keys vi
 
-# CTRL-
+# CTRL-*
 set-window-option -g xterm-keys on
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
