--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -202,8 +202,10 @@ colors:
   # everforest theme: https://github.com/sainnhe/everforest/wiki
   primary:
     # background: '#2b3339'
-    # background: '#262525' #'#232222'
-    background: '#282626' #'#232222'
+    # background: '#262525'
+    # background: '#282626'
+    # background: '#363131'
+    background: '#383232'
     foreground: '#d3c6aa'
   normal:
     black:   '#4b565c'
