--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,6 +27,7 @@ setw -g mode-keys vi
 
 # CTRL-*
 set-window-option -g xterm-keys on
+set-option -gw xterm-keys on
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
@@ -58,6 +59,9 @@ bind '"' split-window -v -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 
+bind-key -n C-Tab next-window
+bind-key -n C-S-Tab previous-window
+
 # Pane movement shortcuts
 bind h select-pane -L
 bind j select-pane -D
@@ -82,7 +86,8 @@ set -g status-style bg=default
 set -g status-style fg=darkgray
 
 # Statusbar: current windows
-setw -g window-status-current-style 'fg=colour237 bg=default bold' 
+# setw -g window-status-current-style 'fg=colour237 bg=default bold'
+setw -g window-status-current-style 'fg=colour237 bg=default'
 setw -g window-status-current-format '#[fg=colour247]▗#[fg=colour8,bg=colour247] #I #[fg=colour237]#W#[fg=colour244] #F #[fg=colour247,bg=default]▘'
 
 # Statusbar: windows
