--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -62,6 +62,9 @@ bind s split-window -v -c '#{pane_current_path}'
 bind-key -n C-Tab next-window
 bind-key -n C-S-Tab previous-window
 
+# bind-key -n M-l next-window
+# bind-key -n M-h previous-window
+
 # Pane movement shortcuts
 bind h select-pane -L
 bind j select-pane -D
