--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,7 +2,7 @@
 # https://github.com/nicknisi/dotfiles/blob/main/tmux/tmux.conf.symlink
 
 bind-key r source-file ~/.tmux.conf \;
-display-message "~/.tmux.conf reloaded"
+# display-message "~/.tmux.conf reloaded"
 bind-key M split-window -h "$EDITOR ~/.tmux.conf"
 
 set -g default-command "${SHELL}"
