--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -81,7 +81,7 @@ bind -r L resize-pane -R 10
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
-set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %H:%M #[fg=colour247]▗#[fg=colour237,bg=colour247] %d %b %a #[fg=colour247,bg=default]▘'
+set -g status-right '#[fg=colour240]▗#[fg=colour250,bg=colour240] %d %b %a #[fg=colour247]▗#[fg=colour237,bg=colour247] %H:%M #[fg=colour247,bg=default]▘'
 set -g status-right-length 50
 set -g status-left-length 0
 
