--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -78,6 +78,8 @@ bind -r K resize-pane -U 10
 bind -r L resize-pane -R 10
 
 # Statusbar
+bind-key Z set status
+
 set -g status-position bottom
 set -g status-justify left
 set -g status-left ''
