--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -231,7 +231,8 @@ colors:
     text: '#000000'
     # cursor: '#ff8fe5'
     # cursor: '#55dd00'
-    cursor: '#bab0ff'
+    # cursor: '#bab0ff'
+    cursor: '#d2ccff'
 
   # Vi mode cursor colors
   #
