--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set-option -gw xterm-keys on
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-bind-key C-e run-shell "tmux capture-pane -p | nvim -R"
+bind-key C-E run-shell "tmux capture-pane -p | nvim -R"
 
 set -gs escape-time 10
 set -g mouse on
